exams/2025-06-16/iptables
# first and last name: mattia fogli
# serial number: 123456

-F
-t nat -F

-P INPUT DROP
-P FORWARD DROP

-A INPUT -i eth1 -p icmp -j ACCEPT

-A INPUT -i eth1 -p tcp --dport 22 -j ACCEPT

-A FORWARD -i eth0 -p tcp --dport 80 -j ACCEPT
-A FORWARD -i eth0 -p tcp --dport 443 -j ACCEPT
-A FORWARD -i eth1 -p tcp --dport 80 -j ACCEPT
-A FORWARD -i eth1 -p tcp --dport 443 -j ACCEPT

-A FORWARD -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

-t nat -A POSTROUTING -o eth0 -j SNAT --to-source 203.0.113.10

-t nat -A PREROUTING -i eth0 -p tcp --dport 443 -j DNAT --to-destination 192.168.50.20:30443
-A FORWARD -i eth0 -o eth1 -p tcp -d 192.168.50.20 --dport 30443 -j ACCEPT
